--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sonymobile.smartconnect.extension.controlsample"
-    android:versionCode="10100"
-    android:versionName="1.1.0" >
+    android:versionCode="1"
+    android:versionName="1.000" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="com.sonyericsson.extras.liveware.aef.EXTENSION_PERMISSION" />
-
+	<uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="false"
         android:icon="@drawable/icon"
