--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sonymobile.smartconnect.extension.controlsample"
+    package="de.leowandersleb.bitcoinsw"
     android:versionCode="1"
     android:versionName="1.000" >
 
@@ -16,6 +16,14 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/ExtensionLightTheme" >
+        <activity
+            android:label="@string/app_name"
+            android:name=".Main">
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="SamplePreferenceActivity"
             android:label="@string/preference_activity_title" >
