--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,18 @@
 		    <meta-data android:name="android.appwidget.provider"
 		               android:resource="@xml/price_widget" />
 		</receiver>
+		<receiver
+		    android:name="de.leowandersleb.bitcoinsw.PriceWidgetIntentReceiver"
+		    android:label="widgetBroadcastReceiver"
+		    android:exported="false" >
+		    <intent-filter>
+		        <action android:name="de.leowandersleb.bitcoinsw.REFRESH" />
+		    </intent-filter>
+		
+		    <meta-data
+		        android:name="android.appwidget.provider"
+		        android:resource="@xml/price_widget_provider" />
+		</receiver>
         <receiver
             android:name="de.leowandersleb.bitcoinsw.ExtensionReceiver"
             android:permission="com.sonyericsson.extras.liveware.aef.HOSTAPP_PERMISSION" >
